[DURACOM-195] [DURACOM-180] Fix issue with header-navbar bottom border z-index

--- a/src/themes/dspace/app/header-nav-wrapper/header-navbar-wrapper.component.scss
+++ b/src/themes/dspace/app/header-nav-wrapper/header-navbar-wrapper.component.scss
@@ -12,12 +12,15 @@
       width: 100%;
       background-color: var(--ds-expandable-navbar-bg);
       position: absolute;
-      border-bottom: var(--ds-header-navbar-border-bottom-style);
       z-index: var(--ds-nav-z-index);
       overflow: hidden;
-      // Following parameters are changed by slideMobileNav animation
-      min-height: var(--ds-collapsible-navbar-height);
-      height: auto;
+
+      nav#collapsible-mobile-navbar {
+        // Following parameters are changed by slideMobileNav animation
+        min-height: var(--ds-collapsible-navbar-height);
+        height: auto;
+        border-bottom: var(--ds-header-navbar-border-bottom-style);
+      }
     }
   }
 
